fix: vertically center-align field items (#2612)

--- a/src/styles/gcs-sheet/_base.scss
+++ b/src/styles/gcs-sheet/_base.scss
@@ -225,10 +225,15 @@ body {
   }
 
   .form-fields {
+    display: flex;
     height: 100%;
     grid-column: 2;
     min-width: 0;
     white-space: nowrap;
+
+    > * {
+      align-self: center;
+    }
 
     :is(input, textarea) {
       width: 100%;
